--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -10,9 +10,10 @@ set(SOURCES
 )
 
 add_library(libprg
-        l2-exercico-1.c
         src/libprg/fila.c
         ../l4-exercicio1.c
+        src/libprg/lista_encadeada.c
+        src/libprg/lista.c
 )
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
