--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(libprg
         ../l4-exercicio1.c
         src/libprg/lista_encadeada.c
         src/libprg/lista.c
+        src/libprg/pilha.c
 )
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
