--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(libprg
         src/libprg/lista.c
         src/libprg/pilha.c
         src/libprg/lista_encadeada_dupla.c
+        src/libprg/recursao.c
 )
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
