--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(libprg
         src/libprg/recursao.c
         src/libprg/bubble_short.c
         src/libprg/arvore.c
+        src/libprg/dicionario.c
+        src/libprg/arvore_binaria.c
 )
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
